# hash32

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
ci/: script.sh
examples/: derive.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: fnv.rs  lib.rs  murmur3.rs
tests/: fnv.rs  murmur3.rs
